# LibLCUPM

./: .cproject  .gitignore  .project  Makefile  Makefile.in  README.md  config.status  configure  configure.ac
LibLCUPM-Static/: LibLCUPM-Static.sln  LibLCUPM-Static.vcxproj  LibLCUPM-Static.vcxproj.filters
LibLCUPM-Static/libs/include/jsoncpp/json/: config.h
LibLCUPM-Static/libs/include/openssl/: opensslconf.h
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
doc/lib/: Forward.md
doc/specification/: README.md
include/lcupm/: DistInfo.hpp  Downloader.hpp  Exceptions.hpp  Exports.hpp  Forward.hpp  LibraryInfo.hpp  Package.hpp  PlatformInfo.hpp  Preferences.hpp  Provider.hpp  Utilities.hpp  Version.hpp
package/: liblcupm.json.in
src/: Downloader.cpp  Exception.cpp  LibraryInfo.cpp  PlatformInfo.cpp  Provider.cpp  Utilities.cpp  Version.cpp
